--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,14 +1,11 @@
 AllCops:
-  TargetRubyVersion: 2.3
+  TargetRubyVersion: 2.6
   Exclude:
     - '.bundle/**/*'
     - 'bin/**/*'
     - 'config/**/*'
     - 'db/**/*'
     - 'lib/tasks/**/*'
-    - 'app/controllers/users/confirmations_controller.rb'
-    - 'app/controllers/users/registrations_controller.rb'
-    - 'lib/extensions/simple_form/inputs/array_input.rb'
     - 'vendor/assets/**/**/*'
     - 'spec/factories/**/*'
 
@@ -30,6 +27,11 @@ Style/RedundantFreeze:
 Metrics/AbcSize:
   Exclude:
     - 'test/**/*'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'test/**/*'
+    - bocu.gemspec
 
 Lint/AmbiguousBlockAssociation:
   Enabled: false
